--- a/app/app.css
+++ b/app/app.css
@@ -10,3 +10,11 @@ body {
     color-scheme: dark;
   }
 }
+
+input,
+select {
+  @apply border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500;
+}
+.list-disc li {
+  @apply text-gray-800 dark:text-gray-200;
+}
